--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -25,11 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup=(\"I\",)"
    ]
   },
   {
@@ -43,11 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "type(tup)"
    ]
   },
   {
@@ -65,13 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
+    "# >>> tup.append(\"r\")\n",
     "\n",
-    "# Your explanation here\n"
+    "# Your explanation here\n",
+    "# >>> A tuple is an inmutable structure, so you can't add or edit any element on it."
    ]
   },
   {
@@ -89,13 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
+    "tup = list(tup)\n",
+    "tup = tup + [\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
+    "tup = tuple(tup)\n",
     "\n",
-    "# Your explanation here\n"
+    "# Your explanation here\n",
+    "# >>> In order to do that, you have to convert it first to a list, then add the elements and convert it to a tuple again."
    ]
   },
   {
@@ -113,11 +132,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1 = (tup)[0:4]\n",
+    "tup2 = (tup)[4:9]\n",
+    "\n",
+    "print(tup1)\n",
+    "print(tup2)"
    ]
   },
   {
@@ -131,11 +164,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3 = tup1 + tup2\n",
+    "print(tup3)\n",
+    "tup3 == tup"
    ]
   },
   {
@@ -147,11 +201,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "len1 = len(tup1)\n",
+    "len2 = len(tup1)\n",
+    "len_total = len1 + len2\n",
+    "len_total == len(tup3)"
    ]
   },
   {
@@ -163,11 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3.index('h')"
    ]
   },
   {
@@ -187,11 +268,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "for e in letters:\n",
+    "    if(e in tup3):\n",
+    "        print('True')\n",
+    "    else:\n",
+    "        print('False')"
    ]
   },
   {
@@ -205,11 +304,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "for e in letters:\n",
+    "    print(tup3.count(e))"
    ]
   },
   {
@@ -225,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,11 +364,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[67, 17, 40, 27, 15, 2, 39, 46, 77, 44, 79, 41, 60, 12, 61, 50, 47, 96, 48, 99, 63, 9, 89, 72, 85, 16, 21, 83, 94, 53, 55, 34, 0, 70, 33, 78, 7, 38, 68, 24, 65, 5, 20, 91, 82, 75, 31, 22, 25, 87, 80, 49, 51, 71, 35, 56, 95, 58, 6, 66, 29, 52, 74, 59, 43, 88, 14, 36, 11, 76, 8, 86, 13, 64, 54, 1, 4, 98, 93, 23]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "sample_list_1 = random.sample(range(100), k=80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -266,11 +390,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 20, 21, 22, 23, 24, 25, 27, 29, 31, 33, 34, 35, 36, 38, 39, 40, 41, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 58, 59, 60, 61, 63, 64, 65, 66, 67, 68, 70, 71, 72, 74, 75, 76, 77, 78, 79, 80, 82, 83, 85, 86, 87, 88, 89, 91, 93, 94, 95, 96, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "print(set1)"
    ]
   },
   {
@@ -289,11 +423,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[63, 42, 82, 86, 94, 40, 93, 78, 29, 91, 50, 90, 6, 35, 48, 6, 7, 23, 56, 40, 43, 66, 64, 32, 8, 66, 10, 17, 0, 94, 77, 72, 95, 41, 51, 83, 24, 19, 79, 40, 59, 37, 35, 53, 53, 20, 47, 38, 17, 33, 40, 54, 74, 27, 8, 5, 1, 66, 82, 21, 63, 31, 4, 28, 93, 45, 9, 82, 66, 87, 98, 73, 82, 78, 34, 2, 81, 74, 67, 94]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "sample_list_2 = []\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.sample(range(100), k=1)[0])\n",
+    "\n",
+    "print(sample_list_2)"
    ]
   },
   {
@@ -305,11 +452,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 17, 19, 20, 21, 23, 24, 27, 28, 29, 31, 32, 33, 34, 35, 37, 38, 40, 41, 42, 43, 45, 47, 48, 50, 51, 53, 54, 56, 59, 63, 64, 66, 67, 72, 73, 74, 77, 78, 79, 81, 82, 83, 86, 87, 90, 91, 93, 94, 95, 98}\n",
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "print(set2)\n",
+    "print(len(sample_list_2))"
    ]
   },
   {
@@ -321,11 +480,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{11, 12, 13, 14, 15, 16, 22, 25, 36, 39, 44, 46, 49, 52, 55, 58, 60, 61, 65, 68, 70, 71, 75, 76, 80, 85, 88, 89, 96, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)"
    ]
   },
   {
@@ -337,11 +506,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{32, 37, 73, 10, 42, 45, 81, 19, 90, 28}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set4 = set2.difference(set1)\n",
+    "print(set4)"
    ]
   },
   {
@@ -353,11 +532,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 4, 5, 6, 7, 8, 9, 17, 20, 21, 23, 24, 27, 29, 31, 33, 34, 35, 38, 40, 41, 43, 47, 48, 50, 51, 53, 54, 56, 59, 63, 64, 66, 67, 72, 74, 77, 78, 79, 82, 83, 86, 87, 91, 93, 94, 95, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -377,11 +566,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "60\n",
+      "30\n",
+      "10\n",
+      "50\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "print(len(set3))\n",
+    "print(len(set4))\n",
+    "print(len(set5))"
    ]
   },
   {
@@ -393,11 +599,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set6 = set()"
    ]
   },
   {
@@ -409,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +823,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -630,7 +837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
