--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -371,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[67, 17, 40, 27, 15, 2, 39, 46, 77, 44, 79, 41, 60, 12, 61, 50, 47, 96, 48, 99, 63, 9, 89, 72, 85, 16, 21, 83, 94, 53, 55, 34, 0, 70, 33, 78, 7, 38, 68, 24, 65, 5, 20, 91, 82, 75, 31, 22, 25, 87, 80, 49, 51, 71, 35, 56, 95, 58, 6, 66, 29, 52, 74, 59, 43, 88, 14, 36, 11, 76, 8, 86, 13, 64, 54, 1, 4, 98, 93, 23]\n"
+      "[12, 17, 53, 44, 73, 9, 30, 32, 63, 82, 64, 92, 87, 15, 11, 40, 29, 80, 48, 19, 1, 51, 97, 67, 46, 49, 10, 5, 27, 79, 62, 86, 55, 95, 24, 65, 42, 78, 21, 8, 28, 85, 70, 7, 13, 83, 90, 93, 68, 18, 88, 37, 75, 39, 84, 72, 61, 96, 66, 94, 33, 25, 58, 43, 14, 77, 59, 76, 57, 22, 20, 41, 91, 38, 54, 81, 23, 52, 69, 47]\n"
      ]
     }
    ],
@@ -397,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 20, 21, 22, 23, 24, 25, 27, 29, 31, 33, 34, 35, 36, 38, 39, 40, 41, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 58, 59, 60, 61, 63, 64, 65, 66, 67, 68, 70, 71, 72, 74, 75, 76, 77, 78, 79, 80, 82, 83, 85, 86, 87, 88, 89, 91, 93, 94, 95, 96, 98, 99}\n"
+      "{1, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 32, 33, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 51, 52, 53, 54, 55, 57, 58, 59, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 73, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97}\n"
      ]
     }
    ],
@@ -430,7 +430,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[63, 42, 82, 86, 94, 40, 93, 78, 29, 91, 50, 90, 6, 35, 48, 6, 7, 23, 56, 40, 43, 66, 64, 32, 8, 66, 10, 17, 0, 94, 77, 72, 95, 41, 51, 83, 24, 19, 79, 40, 59, 37, 35, 53, 53, 20, 47, 38, 17, 33, 40, 54, 74, 27, 8, 5, 1, 66, 82, 21, 63, 31, 4, 28, 93, 45, 9, 82, 66, 87, 98, 73, 82, 78, 34, 2, 81, 74, 67, 94]\n"
+      "[96, 2, 27, 3, 55, 42, 57, 49, 36, 76, 95, 16, 25, 18, 28, 81, 30, 28, 18, 3, 68, 39, 21, 71, 41, 87, 76, 96, 23, 92, 83, 50, 16, 99, 11, 32, 21, 41, 35, 64, 9, 41, 29, 30, 92, 40, 27, 55, 53, 42, 33, 17, 59, 30, 12, 36, 47, 54, 34, 14, 91, 23, 41, 9, 77, 13, 59, 37, 90, 73, 61, 28, 40, 50, 11, 32, 27, 58, 70, 6]\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 17, 19, 20, 21, 23, 24, 27, 28, 29, 31, 32, 33, 34, 35, 37, 38, 40, 41, 42, 43, 45, 47, 48, 50, 51, 53, 54, 56, 59, 63, 64, 66, 67, 72, 73, 74, 77, 78, 79, 81, 82, 83, 86, 87, 90, 91, 93, 94, 95, 98}\n",
+      "{2, 3, 6, 9, 11, 12, 13, 14, 16, 17, 18, 21, 23, 25, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 39, 40, 41, 42, 47, 49, 50, 53, 54, 55, 57, 58, 59, 61, 64, 68, 70, 71, 73, 76, 77, 81, 83, 87, 90, 91, 92, 95, 96, 99}\n",
       "80\n"
      ]
     }
@@ -487,7 +487,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{11, 12, 13, 14, 15, 16, 22, 25, 36, 39, 44, 46, 49, 52, 55, 58, 60, 61, 65, 68, 70, 71, 75, 76, 80, 85, 88, 89, 96, 99}\n"
+      "{1, 5, 7, 8, 10, 15, 19, 20, 22, 24, 38, 43, 44, 46, 48, 51, 52, 62, 63, 65, 66, 67, 69, 72, 75, 78, 79, 80, 82, 84, 85, 86, 88, 93, 94, 97}\n"
      ]
     }
    ],
@@ -513,7 +513,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{32, 37, 73, 10, 42, 45, 81, 19, 90, 28}\n"
+      "{2, 3, 34, 35, 6, 36, 71, 99, 16, 50}\n"
      ]
     }
    ],
@@ -539,7 +539,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 4, 5, 6, 7, 8, 9, 17, 20, 21, 23, 24, 27, 29, 31, 33, 34, 35, 38, 40, 41, 43, 47, 48, 50, 51, 53, 54, 56, 59, 63, 64, 66, 67, 72, 74, 77, 78, 79, 82, 83, 86, 87, 91, 93, 94, 95, 98}\n"
+      "{9, 11, 12, 13, 14, 17, 18, 21, 23, 25, 27, 28, 29, 30, 32, 33, 37, 39, 40, 41, 42, 47, 49, 53, 54, 55, 57, 58, 59, 61, 64, 68, 70, 73, 76, 77, 81, 83, 87, 90, 91, 92, 95, 96}\n"
      ]
     }
    ],
@@ -570,24 +570,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "80\n",
-      "60\n",
-      "30\n",
-      "10\n",
-      "50\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "print(len(set1))\n",
-    "print(len(set2))\n",
-    "print(len(set3))\n",
-    "print(len(set4))\n",
-    "print(len(set5))"
+    "len(set1) + len(set2) - len(set5) == len(set3) + len(set4) + len(set5)"
    ]
   },
   {
@@ -618,9 +613,20 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 32, 33, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 51, 52, 53, 54, 55, 57, 58, 59, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 73, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -634,9 +640,21 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -650,9 +668,20 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "print(set2.issubset(set1))\n",
+    "print(set3.issubset(set1))"
    ]
   },
   {
@@ -666,9 +695,22 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97, 99}\n",
+      "{1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set_3_4_5 = set3.union(set4, set5)\n",
+    "print(set_3_4_5)\n",
+    "set_1_2 = set3.union(set1, set2)\n",
+    "print(set_1_2)"
    ]
   },
   {
@@ -682,9 +724,21 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set_3_4_5 == set_1_2"
    ]
   },
   {
@@ -698,9 +752,21 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set1.pop()"
    ]
   },
   {
@@ -718,9 +784,43 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "1 in set1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5, 7, 8, 10, 12, 13, 14, 15, 17, 18, 20, 22, 23, 24, 25, 27, 28, 30, 32, 33, 37, 38, 40, 42, 43, 44, 46, 47, 48, 52, 53, 54, 55, 57, 58, 62, 63, 64, 65, 66, 67, 68, 70, 72, 73, 75, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 88, 90, 92, 93, 94, 95, 96, 97}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "for e in list_to_remove:\n",
+    "    if e in set1:\n",
+    "        set1.remove(e)\n",
+    "\n",
+    "print(set1)"
    ]
   },
   {
@@ -738,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,11 +872,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 8, 'about': 1, 'all': 1, 'although': 3, 'and': 23, 'are': 1, 'at': 1, 'baby': 14, 'backseat': 1, 'bag': 1, 'bar': 1, 'be': 16, 'bedsheets': 3, 'begin': 1, 'best': 1, 'body': 17, 'boy': 2, 'brand': 6, 'can': 1, 'chance': 1, 'club': 1, 'come': 37, 'conversation': 1, 'crazy': 2, 'dance': 1, 'date': 1, 'day': 6, 'discovering': 6, 'do': 3, 'doing': 2, \"don't\": 2, 'drinking': 1, 'driver': 1, 'eat': 1, 'every': 6, 'falling': 3, 'family': 1, 'fast': 1, 'fill': 2, 'find': 1, 'first': 1, 'follow': 6, 'for': 3, 'friends': 1, 'get': 1, 'girl': 2, 'give': 1, 'go': 2, 'going': 1, 'grab': 2, 'hand': 1, 'handmade': 2, 'heart': 3, 'hours': 2, 'how': 1, 'i': 6, \"i'll\": 1, \"i'm\": 23, 'in': 27, 'is': 5, \"isn't\": 1, 'it': 1, 'jukebox': 1, 'just': 1, 'kiss': 1, 'know': 2, 'last': 3, 'lead': 6, 'leave': 1, 'let': 1, \"let's\": 2, 'like': 10, 'love': 25, 'lover': 1, 'magnet': 3, 'make': 1, 'man': 1, 'may': 2, 'me': 10, 'mind': 2, 'much': 2, 'my': 33, 'new': 6, 'night': 3, 'not': 2, 'now': 11, 'of': 6, 'okay': 1, 'on': 40, 'one': 1, 'our': 1, 'out': 1, 'over': 1, 'place': 1, 'plate': 1, 'play': 1, 'pull': 3, 'push': 3, 'put': 3, 'radio': 1, 'room': 3, 'say': 2, 'shape': 6, 'shots': 1, 'singing': 2, 'slow': 1, 'smell': 3, 'so': 2, 'somebody': 2, 'something': 6, 'sour': 1, 'start': 2, 'stop': 1, 'story': 1, 'sweet': 1, 'table': 1, 'take': 1, 'talk': 4, 'taxi': 1, 'tell': 1, 'that': 2, 'the': 18, 'then': 3, 'thrifty': 1, 'to': 2, 'too': 5, 'trust': 1, 'up': 3, 'van': 1, 'waist': 2, 'want': 2, 'was': 2, 'we': 7, \"we're\": 1, 'week': 1, 'were': 3, 'where': 1, 'with': 22, 'you': 16, 'your': 21}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "# 1. First extract the keys of word_freq and convert it to a list called keys.\n",
+    "keys = (list(word_freq.keys()))\n",
+    "\n",
+    "# 2. Sort the keys list.\n",
+    "keys.sort()\n",
+    "\n",
+    "# 3. Create an empty dictionary word_freq2.\n",
+    "word_freq2 = {}\n",
+    "\n",
+    "# 4. Use a FOR loop to iterate each value in keys. For each key iterated.\n",
+    "# Find the corresponding value in word_freq and insert the key-value pair to word_freq2.\n",
+    "for e in keys:\n",
+    "    word_freq2[e] = word_freq[e]\n",
+    "\n",
+    "print(word_freq2)"
    ]
   },
   {
@@ -813,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
