--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -25,11 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I',)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup = ('I',)\n",
+    "\n",
+    "print(tup)"
    ]
   },
   {
@@ -43,11 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(type(tup))"
    ]
   },
   {
@@ -65,13 +83,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "tup_lst = list(tup)\n",
     "\n",
-    "# Your explanation here\n"
+    "elements1 = [\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
+    "\n",
+    "for i in elements1:\n",
+    "    \n",
+    "    tup_lst.append(i)\n",
+    "    \n",
+    "tup = tuple(tup_lst)\n",
+    "tup\n",
+    "# Your explanation here\n",
+    "#There's not a function for add elements to a tuple, so we have to convert it to list and use a for loop for add them"
    ]
   },
   {
@@ -89,13 +127,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "elements2 = [\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
     "\n",
-    "# Your explanation here\n"
+    "tup_lst = list(tup)\n",
+    "\n",
+    "for i in range(len(elements2)):\n",
+    "    \n",
+    "    tup_lst[i] = elements2[i]\n",
+    "\n",
+    "tup = tuple(tup_lst)\n",
+    "tup\n",
+    "\n",
+    "# Your explanation here\n",
+    "#We don't append elements, we re-assign them, so we use a for loop and list convertion for re-assign new elements"
    ]
   },
   {
@@ -113,11 +173,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n') ('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "\n",
+    "tup1 = tup[:4]\n",
+    "\n",
+    "tup2 = tup[-4:]\n",
+    "\n",
+    "print(tup1, tup2)"
    ]
   },
   {
@@ -131,11 +205,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+      "tup3 equals to tup\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3 = tup1 + tup2\n",
+    "\n",
+    "print(tup3)\n",
+    "\n",
+    "if(tup3==tup): print(\"tup3 equals to tup\")\n",
+    "    \n",
+    "else: print(\"qué cojones van a ser iguales\")"
    ]
   },
   {
@@ -147,11 +236,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's the same\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "number1, number2, number3 = len(tup1), len(tup2), len(tup3)\n",
+    "\n",
+    "if(number1+number2==number3): print(\"It's the same\")\n",
+    "    \n",
+    "else: print(\"It's not the same\")"
    ]
   },
   {
@@ -163,11 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3_lst = list(tup3)\n",
+    "\n",
+    "for i in range(len(tup3_lst)):\n",
+    "    \n",
+    "    if(tup3_lst[i]=='h'): print(i)"
    ]
   },
   {
@@ -187,11 +300,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for i in letters:\n",
+    "    \n",
+    "    if(i in tup3): print(True)\n",
+    "        \n",
+    "    else: print(False)"
    ]
   },
   {
@@ -205,11 +336,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The letter a appear 1 times.\n",
+      "The letter b appear 0 times.\n",
+      "The letter c appear 1 times.\n",
+      "The letter d appear 0 times.\n",
+      "The letter e appear 0 times.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "for i in letters:\n",
+    "    \n",
+    "    for j in tup3:\n",
+    "        \n",
+    "        if(i==j):\n",
+    "            \n",
+    "            count = count + 1\n",
+    "            \n",
+    "    print(\"The letter \" + i + \" appear \" + str(count) + \" times.\")\n",
+    "    \n",
+    "    count = 0"
    ]
   },
   {
@@ -225,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,11 +407,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 12, 16, 77, 50, 27, 15, 11, 71, 48, 25, 13, 26, 88, 44, 97, 22, 32, 64, 78, 65, 63, 4, 69, 35, 73, 54, 70, 2, 98, 28, 5, 46, 24, 33, 53, 92, 0, 40, 7, 86, 52, 56, 17, 95, 100, 85, 42, 31, 75, 19, 59, 47, 99, 83, 57, 84, 76, 39, 10, 30, 91, 81, 96, 79, 93, 41, 74, 37, 45, 18, 49, 55, 20, 58, 29, 23, 34, 38, 72]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "lst_numbers = []\n",
+    "\n",
+    "sample_list_1 = []\n",
+    "\n",
+    "for i in range(0,101):\n",
+    "    \n",
+    "    lst_numbers.append(i)\n",
+    "    \n",
+    "for j in range(80):\n",
+    "    \n",
+    "    sample_list_1 = random.sample(lst_numbers, 80)\n",
+    "\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -266,11 +443,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1 = set(sample_list_1)\n",
+    "\n",
+    "print(len(set1))"
    ]
   },
   {
@@ -616,7 +803,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -630,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
