--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,14 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 12, 16, 77, 50, 27, 15, 11, 71, 48, 25, 13, 26, 88, 44, 97, 22, 32, 64, 78, 65, 63, 4, 69, 35, 73, 54, 70, 2, 98, 28, 5, 46, 24, 33, 53, 92, 0, 40, 7, 86, 52, 56, 17, 95, 100, 85, 42, 31, 75, 19, 59, 47, 99, 83, 57, 84, 76, 39, 10, 30, 91, 81, 96, 79, 93, 41, 74, 37, 45, 18, 49, 55, 20, 58, 29, 23, 34, 38, 72]\n"
+      "[62, 93, 61, 50, 71, 25, 20, 9, 65, 99, 60, 39, 88, 21, 55, 64, 32, 98, 24, 80, 77, 78, 87, 76, 3, 52, 17, 16, 37, 91, 84, 100, 40, 6, 72, 48, 97, 4, 83, 46, 68, 0, 14, 70, 1, 85, 58, 15, 26, 28, 10, 89, 59, 27, 30, 13, 11, 2, 19, 33, 90, 41, 18, 67, 44, 47, 38, 63, 95, 36, 81, 96, 22, 12, 34, 54, 56, 43, 31, 94]\n"
      ]
     }
    ],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -476,11 +476,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64, 70, 87, 30, 25, 35, 84, 14, 99, 83, 0, 28, 8, 88, 60, 21, 50, 90, 54, 24, 89, 69, 76, 7, 77, 1, 49, 36, 63, 73, 46, 13, 45, 81, 62, 80, 94, 78, 4, 55, 91, 98, 33, 97, 31, 92, 32, 17, 61, 23, 47, 51, 65, 43, 39, 48, 3, 59, 67, 16, 41, 42, 2, 95, 96, 15, 11, 29, 71, 19, 72, 82, 52, 58, 27, 44, 85, 22, 40, 79]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "import random \n",
+    "\n",
+    "lst_numbers = []\n",
+    "\n",
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in range(0,101):\n",
+    "    \n",
+    "    lst_numbers.append(i)\n",
+    "    \n",
+    "for j in range(80):\n",
+    "    \n",
+    "    sample_list_2 = random.sample(lst_numbers, 80)\n",
+    "\n",
+    "print(sample_list_2)"
    ]
   },
   {
@@ -496,7 +518,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "set2 = set(sample_list_2)\n",
+    "\n",
+    "print(len())"
    ]
   },
   {
