--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -757,9 +757,13 @@
    "source": [
     "set3 = set(set3)\n",
     "\n",
-    "print(set3.union(set4).union(set5))\n",
+    "setgod1 = set3.union(set4).union(set5)\n",
     "\n",
-    "print(set3.union(set4).union(set5).union(set1).union(set2))"
+    "print(setgod1)\n",
+    "\n",
+    "setgod2 = set3.union(set4).union(set5).union(set1).union(set2)\n",
+    "\n",
+    "print(setgod2)"
    ]
   },
   {
@@ -771,11 +775,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(setgod1==setgod2)"
    ]
   },
   {
@@ -787,11 +799,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18, 20, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 35, 36, 37, 40, 41, 42, 43, 44, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 58, 59, 60, 61, 62, 63, 65, 66, 67, 69, 70, 71, 72, 73, 74, 76, 77, 78, 79, 80, 81, 82, 83, 84, 88, 89, 91, 94, 95, 96, 97, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1.pop()\n",
+    "\n",
+    "print(set1)"
    ]
   },
   {
@@ -807,11 +829,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{7, 27, 28, 30, 32, 33, 35, 36, 37, 40, 42, 43, 44, 47, 48, 50, 52, 53, 54, 55, 56, 58, 60, 62, 63, 65, 66, 67, 70, 72, 73, 74, 76, 77, 78, 80, 82, 83, 84, 88, 94, 95, 96, 97, 98, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "set1_lst = list(set1)\n",
+    "\n",
+    "for i in list_to_remove:\n",
+    "    \n",
+    "    for j in set1_lst:\n",
+    "        \n",
+    "        if(i==j): set1_lst.remove(j)\n",
+    "\n",
+    "set1 = set(set1_lst)\n",
+    "\n",
+    "print(set1)"
    ]
   },
   {
@@ -829,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
